v 1.2 - Permiso de para ubicacion agregado - Ventana de rutas disponibles agregada - Chip agregado al seleccionar una ruta - Animacion de Chip agregada - Validacion para tener un solo Chip

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
 
     <string name="iniciarSesion_str">Iniciar sesion</string>
     <string name="rutas_str">Rutas</string>
+    <string name="rutasDisponibles_str">Rutas disponibles</string>
 </resources>
