v 1.3 - Icono de la app agregado - Pantalla de inicio añadida - Muestra mensaje para el permiso de ubicacion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">Rutas</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_fullscreen">Rutas</string>
 
     <string name="iniciarSesion_str">Iniciar sesion</string>
     <string name="rutas_str">Rutas</string>
     <string name="rutasDisponibles_str">Rutas disponibles</string>
+
+    <string name="mensaje">Para el correcto funcionamiento de la app, Por favor acepta el permiso de ubicacion : )</string>
 </resources>
