v 1.7 - Interfaz de mapa modificada - Muestra varias rutas a la vez - No repite rutas - Colores para las diferentes rutas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="rutasDisponibles_str">Rutas disponibles</string>
 
     <string name="mensaje">Para el correcto funcionamiento de la app, Por favor acepta el permiso de ubicacion : )</string>
+    <string name="yaSeleccionada_str">Ya seleccionada!</string>
 </resources>
